# demo_tutorial

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  alembic.ini  docux-api-0.1.26.tgz  docux-frontend-0.1.11.tgz  pyproject.toml  render.yaml  requirements-ocr.txt  requirements.txt  run_eval.sh  stack-down.sh  stack-up.sh  배포계획.html
.claude/: settings.json
.claude/skills/harness/: SKILL.md
.claude/skills/review/: SKILL.md
.github/workflows/: pages.yml
demo_data/: chat_conversations.jsonl  employee_questions.jsonl  finance_kb.jsonl  kb_articles.jsonl
frontend/: .dockerignore  .gitignore  der2.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  recod2.md  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/app/: AppLayout.tsx  CircularProgress.tsx  icons.tsx
frontend/src/components/: Dropzone.test.tsx  Dropzone.tsx  ImageViewer.test.tsx  ImageViewer.tsx  ZoomControls.tsx
frontend/src/lib/: chatSessions.ts  chatStore.test.ts  chatStore.ts  diffStore.test.ts  diffStore.ts  fileActions.tsx  jsonl.test.ts  jsonl.ts  pagePersistence.ts  parseStore.test.ts  parseStore.ts  recentDocs.ts  uploadDoc.test.tsx  uploadDoc.tsx  userSettings.test.ts  userSettings.ts
frontend/src/pages/: ChatPage.test.tsx  ChatPage.tsx  DiffPage.tsx  (+12 more)
helm/: README.md
helm/docux/: Chart.yaml  values.yaml
helm/docux-api/: Chart.yaml  values.yaml
helm/docux-frontend/: Chart.yaml  values.yaml
migrations/: env.py
migrations/versions/: 0001_create_users.py  0002_account_password_member.py  0003_extraction.py
phases/: index.json
phases/6-codeserver-pipeline/: index.json  step0.md  step1.md  step2.md  step3.md  step4.md  step5.md  step6.md  step7.md  step8.md
samlple_data_mini/annotations_label/: bank_00001.json  bank_00004.json  bank_00005.json  bank_00010.json  bank_00011.json  bank_00012.json  bank_00013.json  bank_00014.json  bank_00023.json  bank_00026.json
scripts/: _ingest_opensearch.py  _reindex_chunks_real_embed.py  build_manifest.py  eval_ocr.py  execute.py  ingest.py  llm_check.py  llm_entrypoint.sh  seed_demo_kb.py  serve_api.py  serve_llm.ps1  serve_llm.py  test_execute.py
src/kms/: factory.py
src/tests/: .dockerignore  _auth_tokens.py  _fake_account_store.py  _fake_extraction_repo.py  _stub_llm.py  conftest.py
(+193 files in other folders)
