[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kms"
version = "0.1.0"
description = "통합 지식 관리 시스템 (Knowledge Management System) backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "sqlalchemy>=2",
    "alembic",
    "fastapi",
    "python-multipart",
    "pymupdf4llm",
    "pymupdf",
    "python-docx",
    "python-pptx",
    "fpdf2",
    "pandas",
    "openpyxl",
    "langchain-text-splitters",
    "neo4j",
    "bcrypt",
    "pyjwt",
    "pyyaml",
    "httpx",
    "mcp>=1.0",
    "langfuse>=2,<3",
    # AI OCR(Qwen3-VL) 성능 추적 — MLflow 추적 클라이언트만(skinny: 서버/UI 의존 제외, 경량).
    "mlflow-skinny>=2,<3",
    "google-genai>=1,<3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]
# 무거운 ML 의존(sentence-transformers·torch)은 런타임 강제하지 않고 optional extra로
# 둔다. 실 임베딩(embedder_backend=sentence_transformers)을 쓸 때만 설치한다.
ml = [
    "sentence-transformers",
]
# 한국어 파싱 OCR(스캔 PDF·이미지). docling 기본 RapidOCR은 중국어 모델이라 한글이
# 깨진다. 크로스플랫폼은 easyocr(ko), macOS 로컬은 ocrmac(Apple Vision, 경량·정확).
# parse_ocr_engine=auto 가 가용 엔진을 자동 선택한다.
ocr = [
    "easyocr",
]
ocr-mac = [
    "ocrmac; sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src", "tests"]
# 하네스 실행기(메타 도구)는 kms 프로젝트 코드가 아니므로 lint 대상에서 제외.
extend-exclude = ["scripts/execute.py", "scripts/test_execute.py"]

[tool.mypy]
python_version = "3.12"
packages = ["kms"]
mypy_path = "src"

# 추출 라이브러리는 타입 스텁을 제공하지 않으므로 import 누락 에러를 무시한다.
[[tool.mypy.overrides]]
module = ["pymupdf4llm", "pymupdf", "fitz", "docx", "docx.*", "pptx", "pptx.*", "pandas", "neo4j", "yaml", "fpdf", "fpdf.*", "sentence_transformers", "torch", "torch.*", "langfuse", "langfuse.*", "mlflow", "mlflow.*", "transformers", "transformers.*", "google.genai", "google.genai.*", "paddleocr", "paddleocr.*", "numpy", "lxml", "lxml.*", "openpyxl", "openpyxl.*", "openparse", "serve_api", "serve_llm"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# 실 인프라(OpenSearch 등)가 떠 있을 때만 도는 계약 테스트 표식. CI 기본은
# `pytest -m "not integration"`으로 제외한다(서버 없으면 추가로 skip).
markers = [
    "integration: 실 외부 서버가 필요한 통합/계약 테스트 (서버 없으면 skip).",
]
